Github Repository App 깃허브 연결 및 auth 토큰 받아오기

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+GITHUB_CLIENT_ID="4f8727e9d02a8b7f5491"
+GITHUB_CLIENT_SECRET="775ab3574462a12b9f805570d13c58f8759755ca"
